--- a/assets/components/navbar.html
+++ b/assets/components/navbar.html
@@ -34,25 +34,16 @@
              data-bs-toggle="dropdown" aria-expanded="false" id="user-dropdown-toggle">
             <!-- <span class="user-icon me-2">👤</span> -->
             <span id="user-name"></span>
+            &nbsp;
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+              <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+            </svg>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li>
-              <h6 class="dropdown-header">
-                <span class="user-icon me-2">👤</span>
-                <span id="user-full-name">Nombre Usuario</span>
-              </h6>
-            </li>
-            <li><hr class="dropdown-divider"></li>
             <li>
               <a class="dropdown-item" href="#" id="mi-cuenta-link">
                 <span class="account-icon me-2">⚙️</span>
                 Mi Cuenta
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#" id="modificar-perfil-link">
-                <span class="edit-icon me-2">✏️</span>
-                Modificar Perfil
               </a>
             </li>
             <li>
@@ -65,6 +56,12 @@
               <a class="dropdown-item" href="#" id="lecturas-link">
                 <span class="lecturas-icon me-2">💧</span>
                 Lecturas de Medidores
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#" id="admin-users-link" style="display: none;">
+                <span class="admin-icon me-2">👥</span>
+                Gestión de Usuarios
               </a>
             </li>
             <li><hr class="dropdown-divider"></li>
